FindInPage: fix wrong match ordinal after javascript update.

BUG=672003
TEST=ParameterizedWebFrameTest.FindInPageJavaScriptUpdatesDOMProperOrdinal

Review-Url: https://codereview.chromium.org/2548253005
Cr-Commit-Position: refs/heads/master@{#437498}

Former-commit-id: e9eaa9c7c71d2006397954a8b731b631db8576cf